# logicfactory_tool

./: README.md
FastEx/: temp3_427826.cnf  temp3_428218.cnf  (+2 more)
FastEx/exact_synthesis_MSV/: CMakeLists.txt  MSV.cpp  README.md
FastEx/exact_synthesis_MSV/experiment/: decoded_circuit.blif  main.cpp  output.cnf
PowerSyn/RL/: CMakeLists.txt  Makefile  README.md  gym.yml
PowerSyn/RL/gym-genus/: README.md
PowerSyn/RL/gym-genus/gym_genus/: cmodule.cpp
PowerSyn/RL/gym-genus/gym_genus/envs/: genus.cmd1  genus.log1  genus_env.py  utils.py
PowerSyn/RL/gym-genus/gym_genus/genus_script/: PAS_map_25_113335585.v  PAS_map_25_121318259.v  PAS_map_25_16245414.v  PAS_map_25_202846851.v  PAS_map_25_202940070.v  PAS_map_25_223450043.v  PAS_map_25_233873351.v  PAS_map_25_52985805.v  PAS_map_5xp11245861.v  PAS_map_9sym4073251  PAS_map_9sym4073251.v  PAS_map_9symml3335585.v  PAS_map_C174073251.v  PAS_map_LEKU-CD3307380.v  PAS_map_Z9sym3873351.v  PAS_map_adder3489947.v  PAS_map_alcom3140021.v  PAS_map_amd2940070.v  PAS_map_apex13873351.v  PAS_map_apex53335585.v  PAS_map_apex6661181.v  PAS_map_apex7859795.v  PAS_map_arbiter3489947.v  PAS_map_b1859795.v  PAS_map_b33495953.v  PAS_map_b42940070.v  PAS_map_b74073251.v  PAS_map_b93066374.v  PAS_map_bar3489947.v  PAS_map_bc01409542.v  PAS_map_bcb3066374.v  PAS_map_br12683006.v  PAS_map_br12692798.v  PAS_map_br21409542.v  PAS_map_c26701332090.v  PAS_map_c35403495953.v  PAS_map_c4993495953.v  PAS_map_c83140021.v  PAS_map_cavlc3450280.v  PAS_map_cc3678149.v  (+94 more)
PowerSyn/RL/gym-netlist/: setup.py
PowerSyn/RL/gym-netlist/gym_netlist/: __init__.py
PowerSyn/RL/gym-netlist/gym_netlist.egg-info/: PKG-INFO  SOURCES.txt
PowerSyn/RL/gym-netlist/gym_netlist/envs/: netlist_env.py
PowerSyn/RL/scripts/: CMakeLists.txt  install_conda_env.sh  install_local_packages.sh  install_pytorch.sh
PowerSyn/RL/sources/: test.py  train.py
PowerSyn/RL/sources/PowerAwareSynthesis/: test_env.py
PowerSyn/RL/sources/PowerAwareSynthesis/benchmarks/sdc/: adder.sdc  arbiter.sdc  bar.sdc  cavlc.sdc  ctrl.sdc  dec.sdc  div.sdc  hyp.sdc  i2c.sdc  int2float.sdc  log2.sdc  max.sdc  mem_ctrl.sdc  multiplier.sdc  prioeity.sdc  priority.sdc  router.sdc  sin.sdc  sqrt.sdc  square.sdc  voter.sdc
PowerSyn/RL/sources/PowerAwareSynthesis/benchmarks/test_set/: adder.v  adder.v.script  arbiter.v  bar.v  bar.v.script  cavlc.v  cavlc.v.script  ctrl.v  ctrl.v.script  dec.v  div.v  div.v.script  hyp.v.script  i2c.v  i2c.v.script  int2float.v  int2float.v.script  log2.v  log2.v.script  main.c  max.v  max.v.script  mem_ctrl.v  mem_ctrl.v.script  multiplier.v  multiplier.v.script  priority.v  priority.v.script  router.v  router.v.script  sin.v  sin.v.script  sqrt.v  sqrt.v.script  square.v  square.v.script  test_list.txt  test_list_big.txt  test_list_large.txt  test_list_small.txt  (+2 more)
PowerSyn/RL/sources/PowerAwareSynthesis/benchmarks/train_set/: 25_1.v  25_10.v  25_11.v  25_12.v  25_13.v  25_14.v  25_15.v  25_16.v  25_17.v  25_18.v  25_19.v  25_2.v  25_20.v  25_21.v  25_22.v  25_23.v  25_24.v  25_25.v  25_3.v  25_4.v  25_5.v  25_6.v  25_7.v  25_8.v  25_9.v  5xp1.v  9sym.v  9symml.v  C17.v  LEKU-CB.v  Z5xp1.v  Z9sym.v  al2.v  alcom.v  alu1.v  alu2.v  alu3.v  alu4.v  amd.v  apex1.v  (+216 more)
PowerSyn/RL/sources/PowerAwareSynthesis/gym-genus/gym_genus/: __init__.py
PowerSyn/RL/sources/PowerAwareSynthesis/gym-genus/gym_genus.egg-info/: PKG-INFO  SOURCES.txt
PowerSyn/RL/sources/PowerAwareSynthesis/netlist/: CMakeLists.txt  abc.history  abc_api.cpp  abc_api.h  feature.cpp  io.cpp  main.cpp  netlist.h  power.cpp  test_data.txt  test_list.txt  train_list.txt  wire.cpp
PowerSyn/RL/sources/PowerAwareSynthesis/netlist/abc/: install.sh
PowerSyn/RL/sources/PowerAwareSynthesis/netlist/mapping/: mapping.cpp
PowerSyn/RL/sources/PowerAwareSynthesis/network/: arguments.py  get_feature_basic  get_feature_glitch  get_power  log_file  test_log.txt  trace_file  train.py  yosys_script.ys
PowerSyn/RL/sources/model_basic/: data  policy.optimizer.pth  policy.pth  system_info.txt
PowerSyn/RL/sources/model_glitch/: data  policy.optimizer.pth  policy.pth  system_info.txt
PowerSyn/mapping/: CMakeLists.txt  README.md
PowerSyn/mapping/experiment/: main.cpp  output.v
PowerSyn/power/: CMakeLists.txt  README.md  power.cpp
PowerSyn/power/experiment/: input.blif  main.cpp
(+2328 files in other folders)
