[metadata]
# replace with your username:
name = ABC-zephyr
# forked from https://github.com/macd/abc
version = 0.0.2
author = Don MacMillen, Sunan Zou
author_email = don@macmillen.net, zousunan@pku.edu.cn
description = A wrapper around Berkeley-abc
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
